# twinkle

./: README.md  ROADMAP.md  config.yml  pyproject.toml
twinkle/: cli.py
twinkle/effects/: README.md  __init__.py  base.py  color_wipe.py  rainbow.py  rainbow_cycle.py  theatre_chase.py  util.py
