[tool.poetry]
name = "twinkle"
version = "0.1.0"
description = "ws2812x effects package"
authors = ["Vipul Sharma <vipul.sharma20@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rpi-ws281x = "^4.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
